logs/Slang/chapter-7/arrays/unpacked/slice-equality.sv.log
name: operations-on-unpacked-arrays-slice-equality
description: Test unpacked arrays operations support (slice equality)
should_fail: 0
tags: 7.4.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/unpacked/slice-equality.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/unpacked/slice-equality.sv:13:10: error: language feature not yet supported
	arr_a = '{1, 1, 1, 1, 0, 0, 0, 0};
	        ^~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/unpacked/slice-equality.sv:14:10: error: language feature not yet supported
	arr_b = '{0, 0, 0, 0, 1, 1, 1, 1};
	        ^~~~~~~~~~~~~~~~~~~~~~~~~
